fix no overflow

--- a/app/client/ouvidoria-social.css
+++ b/app/client/ouvidoria-social.css
@@ -44,6 +44,12 @@ hr {
     height: 240px;
 }
 
+.post-preview {
+    white-space: pre-line;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .post-preview img {
     max-height: 3em;
     max-width: 3em;
